@startuml 16-clases-infraestructura
title Capa de infraestructura (infraestructure.ordermanager): cola de órdenes (lease) y adaptadores de saga
!pragma layout smetana
hide empty members
skinparam classAttributeIconSize 0

package "infraestructure.ordermanager.cola" {
  class GestorOrdenes <<@Component>> {
    -servicioOrdenes : ServicioOrdenes
    -trabajador : TrabajadorOrdenes
    +despachar()  «@Scheduled»
  }
  class TrabajadorOrdenes <<@Component>> {
    -servicioOrdenes : ServicioOrdenes
    -procesador : ProcesadorOrden
    +drenar()  «pool @Async»
    +parar()
  }
  class ServicioOrdenes <<@Service>> {
    -repo : RepositorioOrdenes
    -lease : Duration
    +encolar(contenido, sagaId, tipoTarea, ejecutarDesde)
    +purgarCompletadas(corte)
    +hayTrabajoPendiente() : boolean
    +reclamarSiguiente(token) : Optional<Orden>
    +finalizar(id, token, ok)
  }
  interface RepositorioOrdenes <<JpaRepository>> {
    +buscarCandidatas(ahora, limiteLease, ventana)
    +reclamar(id, token, ahora, limiteLease)
    +finalizar(id, estado, token)
    +purgarCompletadasAntesDe(corte)
  }
  note bottom of RepositorioOrdenes
    Patrón lease con UPDATE condicional.
    Elegible si ejecutar_desde <= now:
    reintentos y timeouts son órdenes
    diferidas, sin scheduler externo.
  end note
  class Orden <<@Entity ordenes>> {
    -id : Long
    -estado : EstadoOrden
    -token / reclamadaEn
    -contenido : String  «TareaSaga JSON»
    -ejecutarDesde / sagaId / tipoTarea
  }
  enum EstadoOrden {
    PENDIENTE
    EN_PROCESO
    COMPLETADA
    FALLIDA
  }
  interface ProcesadorOrden {
    +procesar(Orden)
  }
  class ConfiguracionEjecucionAsincrona <<@Configuration>> {
    +ejecutorOrdenes(tamanoPool) : Executor
  }
  note bottom of Orden
    La Orden es infraestructura pura: la cola de
    tareas durable del gestor. El estado de negocio
    vive solo en las sagas (EstadoSaga).
  end note
}

package "infraestructure.ordermanager.saga" {
  class ProcesadorOrdenSaga <<@Component>> {
    -manejador : ManejadorTareasSaga
    -codec : CodecTareaSaga
    +procesar(Orden)
  }
  class CodecTareaSaga <<@Component>> {
    +tipoDe(TareaSaga) : String
    +codificar(TareaSaga) : String
    +decodificar(String) : TareaSaga
  }
  note bottom of CodecTareaSaga
    Discriminadores: INICIAR, ARRANCAR_SAGA (con tipoSaga),
    REINTENTAR (paso por nombre -> PasoSaga.de),
    TIMEOUT_SECUNDARIA2, RESULTADO_SECUNDARIA2_OK/_ERROR.
  end note
  class AdaptadorColaTareas <<@Component>> {
    -servicioOrdenes : ServicioOrdenes
    -codec : CodecTareaSaga
    +encolar(tarea)
    +encolar(tarea, noAntesDe)
    +purgarTerminadasAntesDe(corte)
  }
  class PlanificadorLimpieza <<@Component>> {
    -limpieza : CasoUsoLimpiarDatosAntiguos
    -retencion : Duration
    +ejecutar()  «@Scheduled cron»
  }
  class ConsumidorRespuestaSecundaria2 <<@Component>> {
    -cola : PuertoColaTareas
    +onRespuesta(mensaje, ...)  «@KafkaListener\ntopic respuesta.secundaria2»
  }
  note bottom of ConsumidorRespuestaSecundaria2
    Único uso de Kafka: la respuesta diferida
    de la saga secundaria 2. Consumer fino:
    encola la tarea y hace ack.
  end note
  class UnidadDeTrabajoSpring <<@Component>> {
    -template : TransactionTemplate
    +enTransaccion(Supplier<T>) : T
  }
  class ConfiguracionAplicacion <<@Configuration>> {
    +@Bean de los servicios de aplicación\n(POJOs sin anotaciones Spring)
  }
}

package "business.ordermanager.aplicacion (puertos y servicios)" {
  interface PuertoColaTareas
  interface UnidadDeTrabajo
  interface CasoUsoLimpiarDatosAntiguos
  class ManejadorTareasSaga
  class ServicioEncolarTramitacion
}

' Realizaciones de puertos e interfaces
ProcesadorOrden <|.. ProcesadorOrdenSaga
PuertoColaTareas <|.. AdaptadorColaTareas
UnidadDeTrabajo <|.. UnidadDeTrabajoSpring

' Flujo del gestor de órdenes (agnóstico de sagas)
GestorOrdenes --> ServicioOrdenes : ¿hay trabajo?
GestorOrdenes --> TrabajadorOrdenes : drenar()
TrabajadorOrdenes --> ServicioOrdenes : reclamar / finalizar
TrabajadorOrdenes --> ProcesadorOrden : procesar(orden)
ServicioOrdenes --> RepositorioOrdenes
RepositorioOrdenes ..> Orden
Orden o-- EstadoOrden

' Fusión gestor <-> sagas (el gestor NO conoce el modelo de sagas)
ProcesadorOrdenSaga --> CodecTareaSaga : decodificar contenido
ProcesadorOrdenSaga --> ManejadorTareasSaga : procesar(TareaSaga)
AdaptadorColaTareas --> ServicioOrdenes : encolar(JSON, sagaId, tipo)
AdaptadorColaTareas --> CodecTareaSaga : codificar
ConsumidorRespuestaSecundaria2 --> PuertoColaTareas : encola resultado\ncomo TareaSaga
ServicioEncolarTramitacion --> PuertoColaTareas
PlanificadorLimpieza --> CasoUsoLimpiarDatosAntiguos : purgarAnterioresA\n(ahora - retención)

@enduml
